crates/diskuse/tests/snapshots/labels_on_a_known_folder@macos-d0-s0.snap
---
source: tests/browse.rs
---
/labels  48.0 KiB
  20.0 KiB  41.7% rust/
  12.0 KiB  25.0% node_modules/
   8.0 KiB  16.7% target/
   4.0 KiB   8.3% __pycache__/
   4.0 KiB   8.3% tagged/
       0 B        .venv/
       0 B        Downloads/
       0 B        venv/









Downloads/ | 0 B  own 0 B | downloads: downloaded files, often old installers and archives
hjkl move  i info  u units  space pick  p picks  r reveal  s/S rescan  / filter  t top  o open  ? help  q quit
--- styles ---
 0   9..17  BOLD
 1   0..10  Green
 1  10..11  DarkGray
 1  12..17  Green
 1  18..23  BOLD
 2   0..10  Green
 2  10..11  DarkGray
 2  12..17  Green
 2  18..31  Green BOLD
 3   0..10  Green
 3  10..11  DarkGray
 3  12..17  Green
 3  18..25  BOLD
 4   0..10  Green
 4  10..11  DarkGray
 4  12..17  Green
 4  18..30  Green BOLD
 5   0..10  Green
 5  10..11  DarkGray
 5  12..17  Green
 5  18..25  Green BOLD
 6   0..11  DarkGray
 6  12..17  DarkGray
 6  18..24  Green BOLD
 7   0..60  Indexed(231) on Indexed(25) BOLD
 8   0..11  DarkGray
 8  12..17  DarkGray
 8  18..23  BOLD
18   0..10  Yellow BOLD
18  10..22  DarkGray
18  25..28  DarkGray
18  28..90  Yellow
19   0..4   Cyan BOLD
19  11..12  Cyan BOLD
19  19..20  Cyan BOLD
19  28..33  Cyan BOLD
19  40..41  Cyan BOLD
19  49..50  Cyan BOLD
19  59..62  Cyan BOLD
19  71..72  Cyan BOLD
19  81..82  Cyan BOLD
19  88..89  Cyan BOLD
19  96..97  Cyan BOLD
19 104..105 Cyan BOLD
